# demo-oop

./: .flake8  .gitignore  README.md  pyproject.toml
src/exercise/: brand.py  car.py  climate_control.py  engine.py  isurance_company.py  person.py
src/possible_solution/: brand.py  car.py  climate_control.py  engine.py  isurance_company.py  main.py  navigation.py  person.py
