[tool.poetry]
name = "src"
version = "0.0.1"
description = "A library module for packing parcels into a container"
authors = ["Tim Jonker <tim.jonker@postnl.nl>", "Pim Rombouts <pim.rombouts@postnl.nl"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.6.2"
black = "^22.12.0"
s3fs = "*"
boto3 = "*"
autoflake = "^2.0.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
pylint = "^2.17.4"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
pytest = "^7.2.0"
pre-commit = "^2.18.1"
black = "^22.12.0"
mypy = "^0.981"
flake8 = "^6.0.0"
pytest-mock = "^3.10.0"

[tool.isort]
profile = "black"
force_sort_within_sections="true"
line_length = 120

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'

[tool.pylint]
[tool.pylint.messages_control]
disable=""",
    line-too-long,
    logging-fstring-interpolation,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    E0202,
    E0401,
    E1101,
    E1121,
    E1126,
    C0115,
    C0116,
    R0902,
    R0903,
    R0904,
    R0911,
    R0913,
    R0914,
    R0801,
    R1710,
    R1705,
    R1720,
    R1725,
    R1734,
    R1735,
    C0103,
    C0411,
    C0413,
    W0108,
    W0212,
    W0237,
    W0246,
    W0511,
    W1514,
    W0621,
    """

[tool.mypy]
ignore_missing_imports = true
exclude = []